# kcipher2

./: .bumpversion.toml  .gitignore  .rumdl.toml  AUTHORS.adoc  CHANGELOG.adoc  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  Cargo.lock.license  Cargo.toml  README.md  justfile  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md  pull_request_template.md.license
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: CI.yaml  REUSE.yaml  SemverChecks.yaml  just.yaml  rumdl.yaml  tombi.yaml
LICENSES/: MIT.txt
benches/: kcipher2.rs
src/: consts.rs  kcipher2.rs  lib.rs  utils.rs
tests/: integration.rs
